Clase 3 Solo abre los archivos en live server

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "anteprimorac.html-end-tag-labels",
-        "aaron-bond.better-comments"
+        "aaron-bond.better-comments",
+        "esbenp.prettier-vscode"
     ]
 }
