ver funciones otra vez

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "anteprimorac.html-end-tag-labels",
         "aaron-bond.better-comments",
-        "esbenp.prettier-vscode"
+        "esbenp.prettier-vscode",
+        "ardevia.sculptui-vscode"
     ]
 }
