--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "impórtalo",
         "Jimi",
         "Villar"
-    ]
+    ],
+    "compile-hero.disable-compile-files-on-did-save-code": false
 }
